# Zodiac--Hybrid-Plasmon-Microscopy

./: README.md  pyproject.toml
.github/workflows/: build.yml
Simulation/: 121nm_150mMNaClTF2LayerDiffuse_Uncharged.mat  README.md  find_nk.m
Simulation/Mie Scattering/: Mie121nm_150mMNaClTF2LayerDiffuse_Uncharged.fig  Mie121nm_150mMNaClTF2LayerDiffuse_Uncharged.m
src/: cli_main.py  main.py
src/core/: control.py  experiments.py
src/devices/: led.py
src/functions/: NIAICont.py
src/gui/: led_control_gui.py
